--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ h2{
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
-  padding-left: 10%;
+  padding-left: 12%;
+  align-items: center;
   
 }
 
@@ -36,6 +37,7 @@ h2{
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
+	padding-right: 8%;
 }
 
 #navbar button {
@@ -45,7 +47,7 @@ h2{
 	background-color:#fff;
 }
 #buttons{
-	
+	transition: 0.4s ease ;
 	border: 1px solid black;
 	border-radius: 6px;
 }
@@ -136,37 +138,10 @@ tr {
 	outline: none;
 	box-shadow: 0px 0px 3px rgba(0, 0, 255, 0.3);
   }
-
-  button #submit{
-    font-size : 14 px;
+  button#submit{
+	font-size : 10 px;
     font-weight: 600;
-    padding: 15px 30px;
-    color: #000;
-    background-color: #fff;
-    border-radius: 4px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    transition: 0.4s ease ;
-    
-}
-
-button #submit{
-    font-size : 13 px;
-    font-weight: 600;
-    padding: 11px 18px;
-    color: #fff;
-    background-color: transparent;
-    border-radius: 4px;
-    cursor: pointer;
-    border: 1px solid #fff;
-    outline: none;
-    transition: 0.4s ease ;
-}
-  button #submit{
-	font-size : 14 px;
-    font-weight: 600;
-    padding: 15px 30px;
+    padding: 5px 100px;
     color: #000;
     background-color: #fff;
     border-radius: 4px;
@@ -176,7 +151,7 @@ button #submit{
     transition: 0.4s ease ;
   }
   
-  button:hover {
-	background-color: #3e8e41;
+  button#submit:hover{
+	background-color: #64ef69;
   }
   
