--- a/style.css
+++ b/style.css
@@ -14,14 +14,15 @@ body {
 }
 
 h2{
-    font-size: 70px;
+	font-size: 50px;
   font-weight: 600;
   background-image: linear-gradient(to left, #553c9a, #b393d3);
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
-  padding-left: 12%;
-  align-items: center;
+  /* padding-left: 12%; */
+  text-align: center;
+  /* align-items: center; */
   
 }
 
@@ -34,19 +35,24 @@ h2{
 }
 
 #navbar {
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-	padding-right: 8%;
+	/* display: flex; */
+	/* justify-content: center; */
+	/* align-items: center; */
+	/* padding-right: 8%; */
+	margin: 20px;
 }
 
 #navbar button {
-	padding: 0.5rem;
+	padding: 0.5rem 1rem;
 	border-radius: 15%;
 	border: none;
 	background-color:#fff;
 }
 #buttons{
+	/* width: 100%; */
+	/* margin: auto; */
+	width: fit-content;
+	margin: auto;
 	transition: 0.4s ease ;
 	border: 1px solid black;
 	border-radius: 6px;
@@ -61,13 +67,15 @@ h2{
 }
 
 table {
-	width: 85%;
-	margin: 30px auto;
+	/* width: fit-content; */
+	/* max-width: 90%; */
+	margin: auto;
+	/* overflow-x: auto; */
 }
 
 table th {
-
-	padding-top: 0.5%;
+	/* padding-top: 0.5%; */
+	padding: 10px;
 	color: black;
 	background-color: #cede89;
 	/* background-color: #fff; */
@@ -82,15 +90,13 @@ table th {
 
 table td {
 	padding: 10px;
+	min-width: 90px;
 	border: thin solid #d4d4d4;
 	width: auto;
 	text-align: center;
 	background-color: #fff;
 }
 
-table span {
-	color: rgb(122, 30, 164)
-}
 
 table tr td:nth-child(-n+2){
 	width: 20px;
@@ -122,9 +128,14 @@ tr {
   }
   
   .inputs {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: 10px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+  }
+  .inputs input{
+	width: 150px;
+	height: 34px;
+	margin: 10px;
   }
   
   input[type="text"], input[type="number"] {
@@ -153,5 +164,10 @@ tr {
   
   button#submit:hover{
 	background-color: #64ef69;
+  }
+
+  .table_br{
+	width: 100%;
+	overflow-x: auto;
   }
   
